added dropdown for the profile

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,8 @@
 @tailwind utilities;
 
 
+body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-family: 'Inter', sans-serif; 
+  }
